--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "get-stdin": "^5.0.1",
     "readability-meter": "^1.0.0",
     "unfluff": "^1.0.0"
+  },
+  "devDependencies": {
+    "tape": "^4.6.0"
   }
 }
